--- a/high-u-user/styles/globals.css
+++ b/high-u-user/styles/globals.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100%;
 }
 
 a {
@@ -20,7 +23,37 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: rgb(0, 0, 0);
+    background: RGB(163, 150, 137);
   }
+}
+
+.colorTextGold {
+  background-image: linear-gradient(
+    to right,
+    #e9a31f 0,
+    #cb9b51 10%, 
+    #f6e27a 25%,
+    #f6f2c0 50%,
+    #f6e27a 75%,
+    #cb9b51 90%,
+    #e9a31f 100%
+    );
+  -webkit-background-clip: text;
+  text-shadow: 0px 1px 1px rgba(255, 245, 181, 0.5); 
+  color: transparent;
+}
+
+.colorBackgroundGold {
+  background-image: linear-gradient(
+    to right,
+    #e9a21f5d 0,
+    #cb9a515d 10%, 
+    #f6e17a78 25%,
+    #f6f2c0ad 50%,
+    #f6e27a78 75%,
+    #cb9b515d 90%,
+    #e9a31f5d 100%
+    );
+
 }
