--- a/high-u-user/styles/globals.css
+++ b/high-u-user/styles/globals.css
@@ -69,3 +69,8 @@ a {
     #e9a31f5d 100%
     );
 }
+
+.dropShadow {
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.07),
+              -10px -10px 5px 0px rgba(0,0,0,0.07);
+}
