--- a/high-u-user/styles/globals.css
+++ b/high-u-user/styles/globals.css
@@ -74,3 +74,12 @@ a {
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.07),
               -10px -10px 5px 0px rgba(0,0,0,0.07);
 }
+
+.imageZoom {
+  transition: 0.5s all cubic-bezier(0.68, -0.55, 0.27, 1.55);
+  overflow: hidden;
+}
+
+.imageZoom:hover {
+  transform: scale(1.08);
+}
