add image in table

--- a/high-u-admin/styles/globals.css
+++ b/high-u-admin/styles/globals.css
@@ -110,11 +110,11 @@ a {
   background-image: linear-gradient(
       to right,
       #e9a21fc0 0,
-      #cb9b51c0 10%,
+      /* #cb9b51c0 10%, */
       #f6e27ac0 25%,
       #f6f2c0c0 50%,
       #f6e27ac0 75%,
-      #cb9b51c0 90%,
+      /* #cb9b51c0 90%, */
       #e9a31fc0 100%);
 
 }
