--- a/front/styles/lodingStyle.css
+++ b/front/styles/lodingStyle.css
@@ -1,10 +1,8 @@
-
-
 #wifi-loader {
-  --background: #fbce97;
-  --front-color: #F0CA83;
-  --back-color: #ded7c3;
-  --text-color: #ffffff;
+  --background: #303030;
+  --front-color: #303030;
+  --back-color: #686868;
+  --text-color: #cacaca;
   width: 64px;
   height: 64px;
   border-radius: 50px;
@@ -283,7 +281,7 @@
 }
 
 .background-load {
-  background: #303030;
+  background: #E2E8F0;
   height: 100vh;
   font: 400 24px 'Prompt, sans-serif';
   display: -webkit-box;
