--- a/front/styles/globals.css
+++ b/front/styles/globals.css
@@ -71,10 +71,10 @@ a {
     
 }
 
-/* .dropShadow {
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.07),
-              -10px -10px 5px 0px rgba(0,0,0,0.07);
-} */
+.mirror-cam {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
 
 .imageZoom {
   transition: 0.5s all cubic-bezier(0.68, -0.55, 0.27, 1.55);
