--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -152,6 +152,15 @@ a {
   top: 80%;
 }
 
+.swiper-pagination-bullet {
+  background-color: #ccc;
+  opacity: 0.5;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #333;
+  opacity: 1;
+}
 
 
 @tailwind base;
