--- a/user/styles/globals.css
+++ b/user/styles/globals.css
@@ -19,6 +19,17 @@ body::-webkit-scrollbar {
   border-radius: 10px;
 }
 
+.custom-scrollbar::-webkit-scrollbar {
+  width: 0.3em;
+  background-color: #303030;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #F0CA83;
+  border-radius: 10px;
+}
+
+
 a {
   color: inherit;
   text-decoration: none;
